Fix for scrollupbutton not appearing and available sources card overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 html {
-  height: 100%;
 }
 
 
@@ -204,6 +203,17 @@ code {
   overflow-x: hidden;
   
   }
+
+  #available-sources-card {
+    min-height: 200px;
+    
+    max-height: 500px;
+    
+    overflow-y: scroll;
+    
+    overflow-x: hidden;
+    
+    }
   
  
 
